--- a/public/html/editor/editView.html
+++ b/public/html/editor/editView.html
@@ -651,7 +651,7 @@
                         stroke-linejoin="round"
                         d="M15.75 17.25v3.375c0 .621-.504 1.125-1.125 1.125h-9.75a1.125 1.125 0 0 1-1.125-1.125V7.875c0-.621.504-1.125 1.125-1.125H6.75a9.06 9.06 0 0 1 1.5.124m7.5 10.376h3.375c.621 0 1.125-.504 1.125-1.125V11.25c0-4.46-3.243-8.161-7.5-8.876a9.06 9.06 0 0 0-1.5-.124H9.375c-.621 0-1.125.504-1.125 1.125v3.5m7.5 10.375H9.375a1.125 1.125 0 0 1-1.125-1.125v-9.25m12 6.625v-1.875a3.375 3.375 0 0 0-3.375-3.375h-1.5a1.125 1.125 0 0 1-1.125-1.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H9.75" />
                     </svg>
-                    Save Copy
+                    Save a Copy
                   </div>
                 </div>
                 <div
@@ -692,44 +692,235 @@
   <div
     x-show="$store.edit.showCopyModal"
     class="fixed inset-0 z-[98] flex items-center justify-center w-full h-full bg-black bg-opacity-50">
-    <div class="z-[99] p-4 modal-bg-and-borders w-[40%] h-[60%] shadow-lg bg-white dark:bg-vdp">
-      <div>
-        <div class="flex w-full justify-between">
-          <div>
-            <h2 class="text-lg font-medium text-vls3 dark:text-vds">Edit Copy Invoice</h2>
-            <p class="text-sm mb-2 text-vls2 dark:text-vds3light">
-              Invoice Number:
-              <span x-text="$store.edit.selectedCopy.invoice_number"></span>
-            </p>
+    <div class="z-[99] p-4 modal-bg-and-borders w-[65%] h-[85%] shadow-lg bg-white dark:bg-vdp overflow-y-auto">
+      <!-- Header -->
+      <div class="flex justify-between items-center">
+        <div>
+          <h2 class="text-lg font-medium text-vls3 dark:text-vds">Edit Copy Invoice</h2>
+          <p class="text-sm mb-2 text-vls2 dark:text-vds3light">
+            Invoice Number:
+            <span x-text="$store.edit.selectedCopy.invoice_number"></span>
+          </p>
+        </div>
+        <div class="flex flex-col text-xs">
+          <div
+            x-data="tooltip('- Paid - total - deposit = 0,\n\n- Pending - a deposit has been attached and a copy invoice created\n\n-- Unpaid - the default value until a deposit has been added.')">
+            <button>
+              <span
+                class="px-1.5 py-0.5 text-xs font-light border rounded-full"
+                :class="{
+                        'border-green-500 text-green-500': $store.edit.selectedCopy.invoice_status==='paid',
+                        'border-yellow-500 text-yellow-500': $store.edit.selectedCopy.invoice_status==='pending',
+                        'border-red-500 text-red-500': $store.edit.selectedCopy.invoice_status==='unpaid'
+                      }"
+                x-text="$store.edit.selectedCopy.invoice_status"></span>
+            </button>
           </div>
-          <div class="flex flex-col text-xs">
-            <div
-              x-data="tooltip('- Paid - total - deposit = 0,\n\n- Pending - a deposit has been \nattached and a copy invoice created\n\n-- Unpaid - the default value until a\n deposit has been added.')">
-              <button>
-                <span
-                  class="px-1.5 py-0.5 text-xs font-light border rounded-full"
-                  :class="{
-                    'border-green-500 text-green-500': $store.edit.selectedCopy.invoice_status === 'paid',
-                    'border-yellow-500 text-yellow-500': $store.edit.selectedCopy.invoice_status === 'pending',
-                    'border-red-500 text-red-500': $store.edit.selectedCopy.invoice_status === 'unpaid'
-                  }"
-                  x-text="$store.edit.selectedCopy.invoice_status"></span>
+        </div>
+      </div>
+
+      <!-- Date Fields -->
+      <div class="grid grid-cols-2 gap-4 mt-4">
+        <label class="flex flex-col gap-2">
+          <span class="text-sm text-vls3 dark:text-vds">Invoice Date:</span>
+          <input type="date" class="modal-input-style !p-1" x-model="$store.edit.selectedCopy.date" />
+        </label>
+        <label class="flex flex-col gap-2">
+          <span class="text-sm text-vls3 dark:text-vds">Due Date:</span>
+          <input type="date" class="modal-input-style !p-1" x-model="$store.edit.selectedCopy.due_date" />
+        </label>
+      </div>
+      <div class="w-full flex items-center justify-between mt-6">
+        <!-- Deposit Editing Component -->
+        <div class="p-4 border border-vls/40 rounded">
+          <h3 class="text-md text-start font-medium">Deposit</h3>
+          <!-- Toggle Type Button -->
+          <div class="flex items-center space-x-2 mt-2">
+            <!-- Current Value Display -->
+            <div class="flex-1 text-sm text-vls2 dark:text-vds3light">
+              Current:
+              <template x-if="$store.edit.selectedCopy.deposit_type == 1">
+                <span>
+                  <span x-text="'%'+$store.edit.selectedCopy.deposit_value"></span>
+                  <span class="font-medium">
+                    <span x-text="'(£' + $store.edit.selectedCopy.depoVal_ifPercent + ')'"></span>
+                  </span>
+                </span>
+              </template>
+              <template x-if="$store.edit.selectedCopy.deposit_type == 0">
+                <span>
+                  £
+                  <span x-text="$store.edit.selectedCopy.deposit_value"></span>
+                </span>
+              </template>
+            </div>
+            <!-- Input & Save Section (compact) -->
+            <div class="flex">
+              <input
+                type="number"
+                step="any"
+                min="0"
+                class="modal-input-style !p-1"
+                x-model.number="$store.edit.tempValues.deposit_value"
+                placeholder="New value" />
+            </div>
+          </div>
+          <div class="w-full flex items-center justify-between py-2">
+            <button
+              @click="$store.edit.changeDepositType(true)"
+              class="modal-btn-prim !text-xs !border-yellow-500 !text-yellow-500 !bg-yellow-500/10">
+              <svg class="size-4">
+                <use href="../../icons/icons.svg#rotate"></use>
+              </svg>
+              Change
+            </button>
+            <button
+              @click="$store.edit.removeDeposit(true)"
+              class="modal-btn-prim !text-xs !border-red-500 !text-red-500 !bg-red-500/10">
+              <svg class="ml-1 w-4 h-4"><use href="/icons/icons.svg#trash" /></svg>
+              Clear
+            </button>
+            <button
+              @click="$store.edit.tempValues = {
+                  ...$store.edit.tempValues,
+                  deposit_type: $store.edit.selectedCopy.deposit_type,
+                  deposit_value: $store.edit.tempValues.deposit_value
+                }"
+              class="modal-btn-prim !text-xs !border-green-500 !text-green-500 !bg-green-500/10">
+              <svg class="size-4">
+                <use href="../../icons/icons.svg#check-circle"></use>
+              </svg>
+              Save
+            </button>
+          </div>
+        </div>
+        <!-- Discount Editing Component -->
+        <div class="mt-6 p-3 border border-vls/40 rounded">
+          <div class="w-full flex items-center justify-between">
+            <h3 class="text-md font-medium mb-2">Discount</h3>
+            <!-- Toggle Type Button -->
+            <button @click="$store.edit.changeDiscountType(true)" class="modal-btn-prim !text-xs">
+              <svg class="size-4">
+                <use href="../../icons/icons.svg#rotate"></use>
+              </svg>
+              Change
+            </button>
+          </div>
+          <div class="flex items-center space-x-2">
+            <!-- Current Value Display -->
+            <div class="flex-1 text-sm text-vls2 dark:text-vds3light">
+              Current:
+              <template x-if="$store.edit.selectedCopy.discount_type == 1">
+                <span>
+                  <span x-text="$store.edit.selectedCopy.discount_value"></span>
+                  % (
+                  <span class="font-medium">
+                    £
+                    <span x-text="$store.edit.selectedCopy.discVal_ifPercent"></span>
+                  </span>
+                  )
+                </span>
+              </template>
+              <template x-if="$store.edit.selectedCopy.discount_type == 0">
+                <span>
+                  £
+                  <span x-text="$store.edit.selectedCopy.discount_value"></span>
+                </span>
+              </template>
+            </div>
+
+            <!-- Input & Save Section (compact) -->
+            <div class="w-1/5 relative">
+              <input
+                type="number"
+                step="any"
+                min="0"
+                class="modal-input-style !p-1 pr-12"
+                x-model.number="$store.edit.tempValues.discount_value"
+                placeholder="New value" />
+              <button
+                @click="$store.edit.tempValues = { 
+                                ...$store.edit.tempValues, 
+                                discount_type: $store.edit.selectedCopy.discount_type, 
+                                discount_value: $store.edit.tempValues.discount_value 
+                              }"
+                class="absolute top-0 right-0 h-full px-2 text-xs border border-green-500 rounded bg-green-500/10 text-green-500 hover:opacity-75 active:scale-90 transition">
+                Save
               </button>
             </div>
           </div>
         </div>
-        <label class="flex flex-col mt-2 gap-2">
-          <span class="text-sm text-vls3 dark:text-vds">Deposit:</span>
-          <input type="number" class="modal-input-style !p-1" x-model="$store.edit.selectedCopy.deposit" />
-        </label>
-        <label class="flex flex-col mt-2 gap-2">
-          <span class="text-sm text-vls3 dark:text-vds">Discount:</span>
-          <input type="number" class="modal-input-style !p-1" x-model="$store.edit.selectedCopy.discount" />
-        </label>
-        <div class="flex justify-between mt-4 space-x-2">
-          <button @click="$store.edit.showCopyModal = false" class="modal-btn-sec !text-xs">Cancel</button>
-          <button @click="$store.edit.saveCopyEdit()" class="modal-btn-prim !text-xs !p-1.5">Save</button>
+      </div>
+
+      <!-- Note Field -->
+      <label class="flex flex-col mt-6 gap-2">
+        <span class="text-sm text-vls3 dark:text-vds">Notes:</span>
+        <textarea class="modal-input-style !p-1" rows="3" x-model="$store.edit.selectedCopy.note"></textarea>
+      </label>
+
+      <!-- Copy Invoice Summary -->
+      <div
+        class="flex flex-col gap-2 p-4 bg-vlp dark:bg-vdp rounded border border-vls/40 shadow-md text-vls3 dark:text-vds text-sm">
+        <div class="flex flex-col gap-2">
+          <h2 class="font-semibold text-base">Invoice Summary</h2>
+          <div class="flex justify-between">
+            <span>Subtotal:</span>
+            <span x-text="'£' + $store.edit.selectedCopy.subtotal_pre_discount"></span>
+          </div>
+          <template x-if="$store.edit.selectedCopy.discount_value > 0">
+            <div class="flex justify-between items-center">
+              <span>Discount:</span>
+              <div class="flex items-center">
+                <span
+                  x-text="$store.edit.selectedCopy.discount_type === 1 
+            ? ($store.edit.selectedCopy.discount_value + '%') 
+            : ('£' + $store.edit.selectedCopy.discount_value)"></span>
+                <span
+                  x-show="$store.edit.selectedCopy.discount_type === 1"
+                  class="text-xs"
+                  x-text="`(£${$store.edit.selectedCopy.discVal_ifPercent})`"></span>
+              </div>
+            </div>
+          </template>
+          <div class="flex justify-between">
+            <span>VAT:</span>
+            <span x-text="'£' + $store.edit.selectedCopy.vat"></span>
+          </div>
+          <div class="flex justify-between">
+            <span>Total:</span>
+            <span class="font-semibold" x-text="'£' + $store.edit.selectedCopy.total"></span>
+          </div>
+          <template x-if="$store.edit.selectedCopy.deposit_value > 0">
+            <div class="flex justify-between">
+              <span>Deposit:</span>
+              <div class="flex items-center">
+                <div class="flex items-center">
+                  <span
+                    x-text="$store.edit.selectedCopy.deposit_type === 1 
+              ? ($store.edit.selectedCopy.deposit_value + '%') 
+              : ('£' + $store.edit.selectedCopy.deposit_value)"></span>
+                  <span
+                    x-show="$store.edit.selectedCopy.deposit_type === 1"
+                    class="text-xs"
+                    x-text="'(£' + $store.edit.selectedCopy.depoVal_ifPercent + ')'"></span>
+                </div>
+                <button @click="$store.edit.removeDeposit(true)" class="text-red-600 hover:text-red-500">
+                  <svg class="ml-1 w-4 h-4"><use href="/icons/icons.svg#trash" /></svg>
+                </button>
+              </div>
+            </div>
+          </template>
+          <div class="flex justify-between font-semibold">
+            <span>Remaining:</span>
+            <span x-text="'£' + $store.edit.selectedCopy.remaining"></span>
+          </div>
         </div>
+      </div>
+
+      <!-- Final Action Buttons -->
+      <div class="flex justify-between mt-6">
+        <button @click="$store.edit.cancelCopyEdit()" class="modal-btn-sec !text-xs">Cancel</button>
+        <button @click="$store.edit.saveCopyEdit()" class="modal-btn-prim !text-xs !p-1.5">Save Invoice</button>
       </div>
     </div>
   </div>
