--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@
         </div>
       </div>
       <!--MARK: VIEWS -->
-      <div class="flex flex-col w-full p-6 overflow-auto bg-[#fafafa] dark:bg-vdp2">
+      <div class="flex flex-col w-full p-6 overflow-auto bg-gray-100 dark:bg-vdp2">
         <div class="flex-1 min-h-0">
           <!-- Main View -->
           <div
